# codex-quota-watch

./: .gitignore  AGENTS.example.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
agent/: .env.example  README.md  pyproject.toml
agent/codex_watch_agent/: codex_rpc.py  main.py  models.py  quota.py  quota_cache.py  scanner.py  settings.py
agent/tests/: test_agent_security.py  test_app_icon_assets.py  test_codex_quota_normalization.py  test_configure_ios_identifiers.py  test_doctor_script.py  test_install_scripts.py  test_models.py  test_quota_command_env.py  test_rotate_watch_token.py  test_scanner_token_usage.py  test_settings.py  test_snapshot_contract.py  test_snapshot_resilience.py
docs/: ARCHITECTURE.md  codex-deploy-prompt.md  device-checklist.md  setup.md  troubleshooting.md  xcode-device-install.md
docs/examples/: snapshot-response.json  watch-response.json
ios-watch/: Package.swift  README.md
ios-watch/CodingQuota.xcodeproj/: project.pbxproj
ios-watch/Config/: WatchApp-Info.plist  WatchApp.entitlements  WatchWidgetExtension-Info.plist  WatchWidgetExtension.entitlements  WidgetExtension-Info.plist  (+2 more)
schemas/: snapshot.schema.json
scripts/: bootstrap-local.sh  check-public-ready.sh  com.example.codexwatchagent.plist.example  configure-ios-identifiers.sh  doctor.sh  install-launch-agent.sh  quota_command_template.py  rotate-watch-token.sh  run-agent.sh  show-pairing-qr.sh  smoke-test-agent.sh  uninstall-launch-agent.sh
(+14 files in other folders)
